fix layout bugs

--- a/src/components/UploadCustom/UploadCustom.module.scss
+++ b/src/components/UploadCustom/UploadCustom.module.scss
@@ -1,7 +1,7 @@
 @import "../../scss/variables";
 
 .upload-container {
-  max-width: 70%;
+  max-width: 522px;
   display: flex;
   flex-direction: column;
   align-items: center;
